<?xml version="1.0"?>
<package format="2">
    <name>pybullet_ros</name>
    <version>0.0.1</version>
    <description>
        ROS wrapper for pybullet simulator
    </description>

    <license>MIT</license>

    <author email="puze@robot-learning.de">Puze Liu</author>
    <maintainer email="puze@robot-learning.de">Puze Liu</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>joint_state_publisher_gui</depend>
    <depend>control_toolbox</depend>
    <depend>controller_manager</depend>
    <depend>hardware_interface</depend>
    <depend>transmission_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>urdf</depend>
    <depend>angles</depend>

    <export>
        <pybullet_ros plugin="${prefix}/robot_hw_sim_plugins.xml"/>
    </export>
</package>
